cải thiện phần header ( thêm position: sticky)

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <main>
-      <header class="header">
+      <header class="fixed-header">
         <div class="content">
           <nav class="navbar">
             <img src="assets/img/Logo.svg" alt="Besnik." />
@@ -27,6 +27,10 @@
               <a href="" class="btn">Sign up</a>
             </div>
           </nav>
+        </div>
+      </header>
+      <header class="header">
+        <div class="content">
           <div class="hero">
             <div class="info">
               <p class="sub-title">Welcome to Besnik Agency</p>
