--- a/index.html
+++ b/index.html
@@ -7,28 +7,72 @@
     <link rel="stylesheet" href="./assets/css/reset.css " />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <link rel="stylesheet" href="./assets/font/stylesheet.css " />
+    <!-- favicon -->
+    <link rel="apple-touch-icon" sizes="57x57" href="./assets/favicon" />
+    <link rel="apple-touch-icon" sizes="60x60" href="./assets/favicon/apple-icon-60x60.png" />
+    <link rel="apple-touch-icon" sizes="72x72" href="./assets/favicon/apple-icon-72x72.png" />
+    <link rel="apple-touch-icon" sizes="76x76" href="./assets/favicon/apple-icon-76x76.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="114x114"
+      href="./assets/favicon/apple-icon-114x114.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="120x120"
+      href="./assets/favicon/apple-icon-120x120.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="144x144"
+      href="./assets/favicon/apple-icon-144x144.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="152x152"
+      href="./assets/favicon/apple-icon-152x152.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./assets/favicon/apple-icon-180x180.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="./assets/favicon/android-icon-192x192.png"
+    />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png" />
+    <meta name="theme-color" content="#ffffff" />
     <title>F8 project 01</title>
   </head>
   <body>
-    <main>
-      <header class="fixed-header">
-        <div class="content">
-          <nav class="navbar">
-            <img src="assets/img/Logo.svg" alt="Besnik." />
-            <ul>
-              <li><a href="#!">Home</a></li>
-              <li><a href="#!">Features</a></li>
-              <li><a href="#!">Services</a></li>
-              <li><a href="#!">Resources</a></li>
-              <li><a href="#!">Contact</a></li>
-            </ul>
-            <div class="action">
-              <a href="" class="sign_in">Sign in</a>
-              <a href="" class="btn">Sign up</a>
-            </div>
-          </nav>
-        </div>
-      </header>
+    <header class="fixed-header">
+      <div class="content">
+        <nav class="navbar">
+          <a href="#home"><img src="assets/img/Logo.svg" alt="Besnik." /></a>
+          <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#!">Features</a></li>
+            <li><a href="#!">Services</a></li>
+            <li><a href="#!">Resources</a></li>
+            <li><a href="#!">Contact</a></li>
+          </ul>
+          <div class="action">
+            <a href="" class="sign_in">Sign in</a>
+            <a href="" class="btn">Sign up</a>
+          </div>
+        </nav>
+      </div>
+    </header>
+
+    <main id="home">
       <header class="header">
         <div class="content">
           <div class="hero">
@@ -335,81 +379,81 @@
           </div>
         </div>
       </div>
-      <footer>
-        <div class="footer">
-          <div class="content">
-            <div class="row-footer">
-              <div class="column">
-                <h3 class="heading">Product</h3>
-                <ul class="list">
-                  <li>
-                    <a href="">Listing</a>
-                  </li>
-                  <li>
-                    <a href="">Property</a>
-                  </li>
-                  <li>
-                    <a href="">Agents</a>
-                  </li>
-                  <li>
-                    <a href="">Blog</a>
-                  </li>
-                </ul>
-              </div>
-              <div class="column">
-                <h3 class="heading">Resources</h3>
-                <ul class="list">
-                  <li>
-                    <a href="">Our Homes</a>
-                  </li>
-                  <li>
-                    <a href="">Member Stories</a>
-                  </li>
-                  <li>
-                    <a href="">Video</a>
-                  </li>
-                  <li>
-                    <a href="">Free trial</a>
-                  </li>
-                </ul>
-              </div>
-              <div class="column">
-                <h3 class="heading">Company</h3>
-                <ul class="list">
-                  <li>
-                    <a href="">Patnerships</a>
-                  </li>
-                  <li>
-                    <a href="">Terms of use</a>
-                  </li>
-                  <li>
-                    <a href="">Privacy</a>
-                  </li>
-                  <li>
-                    <a href="">Sitemap</a>
-                  </li>
-                </ul>
-              </div>
-              <div class="column" style="justify-content: flex-end">
-                <h3 class="heading heading1">Get in touch</h3>
-                <p class="desc">
-                  You’ll find your next home, in any style you prefer.
-                </p>
-                <div class="row-icon">
-                  <img src="assets/img/facebook-icon.svg" alt="" />
-                  <img src="assets/img/twitter-icon.svg" alt="" />
-                  <img src="assets/img/lindedi-icon.svg" alt="" />
-                </div>
-              </div>
+    </main>
+    <footer>
+      <div class="footer">
+        <div class="content">
+          <div class="row-footer">
+            <div class="column">
+              <h3 class="heading">Product</h3>
+              <ul class="list">
+                <li>
+                  <a href="">Listing</a>
+                </li>
+                <li>
+                  <a href="">Property</a>
+                </li>
+                <li>
+                  <a href="">Agents</a>
+                </li>
+                <li>
+                  <a href="">Blog</a>
+                </li>
+              </ul>
             </div>
-            <div class="row">
-              <img src="assets/img/Logo.svg" alt="" />
-              <p class="desc">Copyright 2020.com, All rights reserved.</p>
+            <div class="column">
+              <h3 class="heading">Resources</h3>
+              <ul class="list">
+                <li>
+                  <a href="">Our Homes</a>
+                </li>
+                <li>
+                  <a href="">Member Stories</a>
+                </li>
+                <li>
+                  <a href="">Video</a>
+                </li>
+                <li>
+                  <a href="">Free trial</a>
+                </li>
+              </ul>
+            </div>
+            <div class="column">
+              <h3 class="heading">Company</h3>
+              <ul class="list">
+                <li>
+                  <a href="">Patnerships</a>
+                </li>
+                <li>
+                  <a href="">Terms of use</a>
+                </li>
+                <li>
+                  <a href="">Privacy</a>
+                </li>
+                <li>
+                  <a href="">Sitemap</a>
+                </li>
+              </ul>
+            </div>
+            <div class="column" style="justify-content: flex-end">
+              <h3 class="heading heading1">Get in touch</h3>
+              <p class="desc">
+                You’ll find your next home, in any style you prefer.
+              </p>
+              <div class="row-icon">
+                <img src="assets/img/facebook-icon.svg" alt="" />
+                <img src="assets/img/twitter-icon.svg" alt="" />
+                <img src="assets/img/lindedi-icon.svg" alt="" />
+              </div>
             </div>
           </div>
+          <div class="row">
+            <img src="assets/img/Logo.svg" alt="" />
+            <p class="desc">Copyright 2020.com, All rights reserved.</p>
+          </div>
         </div>
-        <div class="footer-sub"></div>
-      </footer>
-    </main>
+      </div>
+      <div class="footer-sub"></div>
+    </footer>
   </body>
 </html>
